trying to fix image issues on iphone and mobile

--- a/css/card.css
+++ b/css/card.css
@@ -51,6 +51,7 @@
    max-width: 100%;
    height: auto;
    align-self: flex-start;
+   transform: scale(0.8);
 }
 
 
